--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,7 +1,7 @@
 :root {
     --c-bg: #DAF7DC;
     --c-text: #42273B;
-    --c-primary: #ABC8C0;
+    --c-primary: #ffdc78e6;
     --c-secondary: #9EE493;
     --c-white: #ffffff;
 }
