--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -2,6 +2,6 @@
     --c-bg: #DAF7DC;
     --c-text: #42273B;
     --c-primary: #ffdc78e6;
-    --c-secondary: #9EE493;
+    --c-secondary: #b39955c0;
     --c-white: #ffffff;
 }
