--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -11,7 +11,7 @@ body::before {
    content: "";
    position: fixed;
    inset: 0;
-   background-image: url("../images/night_sky.jpg"); /* ← SEM jen doplníš cestu */
+   background-image: url("../images/night_sky.jpg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
@@ -212,17 +212,139 @@ main {
 /* Main Content A A A*/
 /* Cart V V V*/
 .cart {
-    background-color: rgba(0,0,0,0.1);
-    box-shadow: var(--c-primary) 0 0 20px,
-                inset var(--c-primary) 0 0 20px;
-    width: 3vw;
-    height: auto;
-    font-size: 1vw;
+    position: fixed;
+    bottom: 70px;
+    right: 0.7vw;
 
+    display: flex;
+    align-items: center;
+    gap: 0.6vw;
+
+    padding: 0.8vw 1vw;
+    background-color: rgba(0,0,0,0.1);
+    box-shadow:
+        var(--c-primary) 0 0 20px,
+        inset var(--c-primary) 0 0 20px;
+    font-size: 0.8vw;
+    border-radius: 20px;
+    z-index: 1000;
+    cursor: pointer;
 }
 
 .cart img {
     width: 1vw;
     height: 1vw;
+    flex-shrink: 0;
 }
+
 /* Cart A A A*/
+/* Footer V V V*/
+.lista { 
+    background-color: rgba(0,0,0,0.5); 
+    margin: 5vh 0 0 0; 
+    box-shadow: 0 0px 20px 0 rgba(0, 0, 0, 0.8); 
+    text-align: center; 
+    padding: 15px 15px 15px 15px; 
+}
+/* Footer A A A*/
+/* Main detail V V V*/
+main_detail {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 1vw 5vw 5vw 5vw;
+    position: relative;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 15px; 
+    box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.preview {
+    width: 34vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img_main {
+    width: 30vw;
+    margin: 2vw 2vw 0vw 2vw;
+} 
+
+
+.other_imgs {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin: 20px 0 2vw 0;
+}
+
+.img_other {
+    width: 5vw;
+    margin: 20px 10px 0 0;
+}
+
+.description {
+    margin: 2vw 2vw 2vw 2vw;
+}
+
+.description h1 {
+    font-size: 2vw;
+}
+
+.marketing_text{
+    font-size: 1vw
+}
+
+.selection {
+    color: white;
+    border: 2px solid var(--c-secondary);
+    border-radius: 5px;
+    box-shadow: var(--c-primary) 0 0 20px,
+                inset var(--c-primary) 0 0 20px;
+    background-color: rgba(0,0,0,0.1);
+    padding: 0.3vw 0.5vw;
+}
+
+.selection option {
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 0;
+}
+/* Main detail A A A*/
+/* About us V V V*/
+main_about {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 1vw 5vw 5vw 5vw;
+    position: relative;
+    z-index: 1;
+    backdrop-filter: blur(10px);
+    background-color: rgba(0,0,0,0.2);
+    border-radius: 15px; 
+    box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
+    overflow: hidden;
+}
+
+.onas_1 {
+    padding: 40px 20px 40px 20px;
+}
+
+.onas_1 p {
+    font-size: 20px;
+    padding: 0 0 0 15px;
+}
+
+.onas_1 p img {
+    width: 25vw;
+    height: 25vw;
+    padding: 0 1vw 0 1vw;
+}
+
+.logos {
+    
+}
+/* About us A A A*/
